# BookShop

./: .gitignore  Accountant.h  Base.h  Bayer.h  Book.h  BookBayer.h  BookSaler.h  BookStore.cpp  BookStore.drawio  CMakeLists.txt  Category.h  Manufacturer.h  Product.h  ProductBayer.h  ProductSaler.h  README.md  ReadWriteVectorFromFile.h  Retail.h  Saler.h  Shop.h  Storage.h  Vector_Book.h  Wholesale.h  main.cpp
Base/: Base.h  Base_Browser.h  Base_Deals.h  Base_Items.h  Base_Sold.h
Items/: Item.h  Item_Book.h  Item_Pen.h
Retail/: Deal.h
Stock/: Stock.h  Stock_Analytics.h  Stock_In.h  Stock_Out.h
